<resources>
    <string name="app_name">Login_Signup_Page</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="mail_id">Mail ID</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="password3">Password</string>
</resources>