<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="#FFDB58"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/WelcomeBacktv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_back"
        android:textStyle="bold"
        android:textSize="30sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="120dp"
        android:textColor="#FFFFFF" /> <!-- end Welcome Back -->


    <TextView
        android:id="@+id/LoginToContinuetv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_to_continue"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_gravity="center"
        android:textColor="#FFFFFF"/> <!-- end Login to continue -->


    <EditText
        android:id="@+id/MailIDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/mail_id"
        android:backgroundTint="#FFDB58"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/> <!-- end edit Username id -->

    <View
        android:id="@+id/mailIDUnderline"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_alignBottom="@id/MailIDet"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/> <!-- White underline -->

    <EditText
        android:id="@+id/Passwordet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password"
        android:textColor="#000000"
        android:backgroundTint="#FFDB58"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"/> <!-- end edit Password -->

    <View
        android:id="@+id/passwordUnderlinev"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_alignBottom="@id/Passwordet"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/> <!-- White underline -->


    <TextView
        android:id="@+id/ForgotPasswordtv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="12dp"
        android:gravity="center"
        android:textColor="#000000"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:textStyle="bold"/> <!-- end Forgot Password-->

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#000000"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="155dp"
        android:layout_marginRight="159dp"/> <!-- end Black underline -->


    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"/> <!-- end button with white text -->



</LinearLayout>