<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1E1E1E"
    android:orientation="vertical">


    <TextView
        android:id="@+id/CreateAccounttv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textStyle="bold"
        android:textSize="25dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:paddingTop="120dp"
        android:textColor="#FFFFFF"/> <!-- Create Account -->


    <EditText
        android:id="@+id/MailIDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:hint="@string/mail_id"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#1E1E1E"
        android:textColor="#000000"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/LoginToContinuetv"/> <!-- edit Username id -->


    <View
        android:id="@+id/mailIDUnderline"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_alignBottom="@id/MailIDet"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_below="@id/MailIDet"/> <!-- White underline -->


    <EditText
        android:id="@+id/Passwordet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="Full Name"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#1E1E1E"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/mailIDUnderline"/> <!-- edit Full Name -->


    <View
        android:id="@+id/passwordUnderlinev"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignBottom="@id/Passwordet"
        android:layout_below="@id/Passwordet"/> <!-- White underline -->


    <EditText
        android:id="@+id/Password3et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/password3"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:backgroundTint="#1E1E1E"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@id/passwordUnderlinev"/> <!-- end Password -->


    <View
        android:id="@+id/passwordUnderline3v"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#FFFFFF"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_alignBottom="@id/Password3et"
        android:layout_below="@id/Password3et"/> <!-- end underline -->


    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Create"
        android:background="@drawable/rounded_button"
        android:textColor="#FFFFFF"
        android:backgroundTint="#FFDB58"
        android:textSize="18dp"
        android:layout_marginTop="40dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@id/passwordUnderlinev"/> <!-- button with white text -->

    <TextView
        android:id="@+id/textLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="14sp"
        android:textColor="#FFDB58"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:paddingTop="220dp"
        android:textAllCaps="true"
        android:layout_below="@id/loginButton"/> <!-- LOGIN -->


    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#FFDB58"
        android:backgroundTint="#FFDB58"
        android:layout_marginLeft="185dp"
        android:layout_marginRight="185dp"
        android:layout_below="@id/textLogin"/> <!-- end underline -->

</LinearLayout>
